Apply IvarI.MEF.Plugins

--- a/ToolBox/ToolBox.Core/ToolBox.Core.csproj
+++ b/ToolBox/ToolBox.Core/ToolBox.Core.csproj
@@ -7,11 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="lib\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="IvarI.MEF.Plugins" Version="1.0.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.1.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
