--- a/ToolBox/ToolBox/ToolBox.csproj
+++ b/ToolBox/ToolBox/ToolBox.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IvarI.MEF.Plugins" Version="1.0.0" />
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
 
