--- a/ToolBox/ToolBox/ToolBox.csproj
+++ b/ToolBox/ToolBox/ToolBox.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="IvarI.MEF.Plugins" Version="1.0.0" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.1.0" />
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
 
