Its alive! Working prototype

--- a/ToolBox/ToolBox/Properties/launchSettings.json
+++ b/ToolBox/ToolBox/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "ToolBox": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "hwt"
     }
   }
 }
