--- a/ToolBox/ToolBox/ToolBox.csproj
+++ b/ToolBox/ToolBox/ToolBox.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToolBox.Shared\ToolBox.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
