--- a/ToolBox/hwtool.Console/hwtool.Console.csproj
+++ b/ToolBox/hwtool.Console/hwtool.Console.csproj
@@ -9,11 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToolBox.Shared\ToolBox.Shared.csproj" />
+    <ProjectReference Include="..\ToolBox.Console.Base\ToolBox.Console.Base.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="if exist &quot;$(TargetPath)&quot; xcopy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\ToolBox\bin\$(ConfigurationName)\netcoreapp3.1\tools\hwtool\&quot; /y" />
+    <Exec Command="if exist &quot;$(TargetPath)&quot; xcopy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\ToolBox.Console\bin\$(ConfigurationName)\netcoreapp3.1\tools\hwtool\&quot; /y" />
   </Target>
 
 </Project>
