--- a/ToolBox/ToolBox.Desktop/ToolBox.Desktop.csproj
+++ b/ToolBox/ToolBox.Desktop/ToolBox.Desktop.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="IvarI.MEF.Plugins" Version="1.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.11" />
@@ -18,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="settings.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
