--- a/ToolBox/RunForrest.Desktop/RunForrest.Desktop.csproj
+++ b/ToolBox/RunForrest.Desktop/RunForrest.Desktop.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.37" />
     <PackageReference Include="System.ComponentModel.Composition" Version="5.0.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
   <PropertyGroup />
   <ItemGroup>
